syntax = "proto3";
package VirtualPaper.Grpc.Service.WallpaperControl;
import "google/protobuf/empty.proto";
import "Protos/models.proto";

service Grpc_WallpaperControlService {
	rpc CloseAllWallpapers(google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc CloseWallpaperByMonitor(VirtualPaper.Grpc.Service.Models.Grpc_CloseWallpaperByMonitorRequest) returns (google.protobuf.Empty);	
    rpc CloseAllPreview(google.protobuf.Empty) returns (google.protobuf.Empty);	
	rpc GetWallpaper(VirtualPaper.Grpc.Service.Models.Grpc_GetWallpaperRequest) returns (VirtualPaper.Grpc.Service.Models.Grpc_WpMetaData);
	rpc AdjustWallpaper(VirtualPaper.Grpc.Service.Models.Grpc_AdjustWallpaperRequest) returns (VirtualPaper.Grpc.Service.Models.Grpc_AdjustWallpaperResponse);
	rpc PreviewWallpaper(VirtualPaper.Grpc.Service.Models.Grpc_PreviewWallpaperRequest) returns (VirtualPaper.Grpc.Service.Models.Grpc_PreviewWallpaperResponse);
	rpc RestartAllWallpapers(google.protobuf.Empty) returns (VirtualPaper.Grpc.Service.Models.Grpc_RestartWallpaperResponse);
	rpc SetWallpaper(VirtualPaper.Grpc.Service.Models.Grpc_SetWallpaperRequest) returns (VirtualPaper.Grpc.Service.Models.Grpc_SetWallpaperResponse);
	rpc CreateMetadataBasic(VirtualPaper.Grpc.Service.Models.Grpc_CreateMetadataBasicRequest) returns (VirtualPaper.Grpc.Service.Models.Grpc_WpBasicData);
	rpc ChangeWallpaperLayoutFolrderPath(VirtualPaper.Grpc.Service.Models.Grpc_ChangePathRequest) returns (google.protobuf.Empty);
	rpc GetRunMonitorByWallpaper(VirtualPaper.Grpc.Service.Models.Grpc_GetMonitorRequest) returns (VirtualPaper.Grpc.Service.Models.Grpc_MonitorData);	
    rpc SendMessageWallpaper(VirtualPaper.Grpc.Service.Models.Grpc_WallpaperMessageRequest) returns (google.protobuf.Empty);
    rpc TakeScreenshot(VirtualPaper.Grpc.Service.Models.Grpc_WallpaperScreenshotRequest) returns (google.protobuf.Empty);
	rpc UpdateBasicData(VirtualPaper.Grpc.Service.Models.Grpc_UpdateBasicDataRequest) returns (VirtualPaper.Grpc.Service.Models.Grpc_WpBasicData);

	rpc GetCoreStats(google.protobuf.Empty) returns (VirtualPaper.Grpc.Service.Models.Grpc_GetCoreStatsResponse);
	rpc SubscribeWallpaperChanged(google.protobuf.Empty) returns (stream google.protobuf.Empty);
    rpc SubscribeWallpaperError(google.protobuf.Empty) returns (stream VirtualPaper.Grpc.Service.Models.Grpc_WallpaperErrorResponse);
}
